@startuml
  ' State Machine
  class StateMachine {
    +UUID id
    +String name
    +String description
    +Boolean isActive
    +List<Status> statuses
    +List<Transition> transitions
    +Status getById(UUID id)
    +Status disable(UUID id)
    +List<StateMachine> getAll(UUID stateMachineId)
  }

  ' Status
  class Status {
    +UUID id
    +StateMachine stateMachine
    +String name
    +Boolean isInitial
    +Status getById(UUID id)
    +Status getInitialStatus(UUID stateMachineId)
    +List<Status> getAll(UUID stateMachineId)
  }

  ' Transition
  class Transition {
    +UUID id
    +StateMachine stateMachine
    +Status sourceStatus
    +Status targetStatus
    +List<Transition> getAll(UUID stateMachineId)
    +Transition exists(UUID stateMachineId, UUID idSourceStatus, UUID idTargetStatus)
  }

  ' Event
  class Event {
    +UUID id
    +StateMachine stateMachine
    +Status status
    +Event create(UUID stateMachineId)
    +List<Event> getAll(UUID stateMachineId)
    +Event getById(UUID stateMachineId, UUID id)
    +Event update(UUID stateMachineId, UUID id, Event model)
  }

  ' StateFlow
  class EventFlow {
    +UUID id
    +Event event
    +LocalDateTime createdAt
    +Event save(Event event)
    +List<EventFlow> getAll(UUID eventId)
  }

' Relações
StateMachine "1" -- "0..*" Status : statuses
StateMachine "1" -- "0..*" Transition : transitions
Status "0..*" -- "0..*" Transition : source/target
StateMachine "1" -- "0..*" Event : events
Event "1" -- "0..*" EventFlow : flows
@enduml
